@@ -2,6 +2,7 @@
 All rights reserved.  Please see niflib.h for license. */
 
 #include "../include/Type.h"
+#include "../include/ObjectRegistry.h"
 using namespace Niflib;
 
 Type::Type (const string & type_name, const Type * par_type ) : name(type_name), base_type(par_type) {} 
@@ -30,4 +31,8 @@ bool Type::IsDerivedType( const Type & compare_to ) const {
 
 string Type::GetTypeName() const {
 	return name;
+}
+
+NiObject * Type::Create() const {
+	return ObjectRegistry::CreateObject(name);
 }
